css/style.css
body {
  background: black;
}

.navbar {
  border-bottom: red 1px solid;
  opacity: 0.8;
}

#showcase {
  position: relative;
  background: url('../img/mountains.jpg');
  min-height: 1200px;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

#showcase .primary-overlay {
  position: absolute;
  top: 0;
  left: 0;
  background: black;
  width: 100%;
  height: 100%;
  opacity: 0.8;
}

#heading {
  padding-top: 30%;
}


.bg-black {
  color: #fff;
  background: #000;
}

.dev-icon {
  font-size: 5rem;
}

@media(min-width: 1199px) {
  .port-item {
    padding: 1.5em !important;
  }
}


@media (max-width: 768px) {

  #showcase {
    min-height: 1000px;
  }
   
  #showcase h1 {
    font-size: 4rem; 
  }

  .mb-resp {
    margin-bottom: 0.3rem; } 
}

